Fixed grid alignment for .main and .footer, shifted other alignment to match

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,14 +333,17 @@ html, body {
   background: var(--bg);
   grid-column: 2 / 2;
   grid-auto-rows: min-content;
+  grid-template-rows: auto 1fr auto;
 }
 
 .hero-section,
 .project-section,
 .recent-section {
+  grid-row: 2;
   grid-column: 1 / 2;
 }
 .featured-section {
+  grid-row: 2;
   grid-column: 2 / 3;
 }
 
